--- a/frontend/Dockerfile
+++ b/frontend/Dockerfile
@@ -2,11 +2,11 @@ FROM node:18-alpine
 
 WORKDIR /frontend
 
-COPY public/ /frontend/public
-COPY src/ /frontend//src
-COPY package.json /frontend/
-
+COPY package*.json ./
 RUN npm install
+COPY . .
+RUN npm run build
+
 
 EXPOSE 3000
 CMD ["npm", "start"]
