--- a/frontend/Dockerfile
+++ b/frontend/Dockerfile
@@ -1,22 +1,11 @@
-# Stage 1: Build the React application
+# Build stage
 FROM node:18-alpine as build-stage
-WORKDIR /app
+WORKDIR /frontend
 COPY package*.json ./
 RUN npm install
 COPY . .
 RUN npm run build
 
-# Stage 2: Setup the production environment
-FROM node:18-alpine as production-stage
-WORKDIR /app
-
-# Install Express
-COPY --from=build-stage /app/package.json /app/package.json
-RUN npm install express
-
-# Copy the build directory and server script from the build-stage
-COPY --from=build-stage /app/build /app/build
-COPY --from=build-stage /app/server.js /app/server.js
 
 EXPOSE 3000
-CMD ["node", "server.js"]
+CMD ["npm", "start"]
