--- a/frontend/Dockerfile
+++ b/frontend/Dockerfile
@@ -1,11 +1,11 @@
-# Build stage
-FROM node:18-alpine as build-stage
-WORKDIR /frontend/
+FROM node:18-alpine
+
+WORKDIR /frontend
+
+COPY public/ /frontend/public
+COPY src/ /frontend//src
 COPY package.json /frontend/
+
 RUN npm install
-COPY . .
-RUN npm run build
 
-
-EXPOSE 3000
 CMD ["npm", "start"]
