--- a/.github/workflows/aws.yml
+++ b/.github/workflows/aws.yml
@@ -62,6 +62,8 @@ jobs:
       run: echo "${{ secrets.DOCKER_PASSWORD }}" | docker login -u "${{ secrets.DOCKER_USERNAME }}" --password-stdin
     - name: list dirs
       run: ls -la
+           ls frontend
+
 
     - name: Build, tag, and push image to Docker Hub
       env:
