--- a/frontend/Dockerfile
+++ b/frontend/Dockerfile
@@ -3,7 +3,7 @@ FROM node:18-alpine
 WORKDIR /frontend
 
 COPY public/ /frontend/public
-COPY src/ /frontend//src
+COPY src/ /frontend/src
 COPY package.json /frontend/
 
 RUN npm install
