--- a/frontend/Dockerfile
+++ b/frontend/Dockerfile
@@ -2,9 +2,9 @@ FROM node:18-alpine
 
 WORKDIR /frontend
 
-COPY public/ /frontend/public
-COPY src/ /frontend/src
-COPY package.json /frontend/
+COPY public/ ./public
+COPY src/ ./src
+COPY package.json ./
 
 RUN npm install
 
