--- a/.github/workflows/aws.yml
+++ b/.github/workflows/aws.yml
@@ -63,7 +63,7 @@ jobs:
     - name: list dirs
       run: | 
         ls -la
-        ls frontend
+        ls frontend/ 
 
     - name: Build, tag, and push image to Docker Hub
       env:
