--- a/.github/workflows/aws.yml
+++ b/.github/workflows/aws.yml
@@ -33,7 +33,7 @@ on:
 env:
   AWS_REGION: us-east-1
   DOCKER_USERNAME: alvin254
-  DOCKER_REPOSITORY: alvin254/fitnesshero
+  DOCKER_REPOSITORY: fitnesshero
   ECS_SERVICE: app-service
   ECS_CLUSTER: cloudific
   CONTAINER_NAME: app
