--- a/.github/workflows/aws.yml
+++ b/.github/workflows/aws.yml
@@ -73,16 +73,26 @@ jobs:
         docker build -t $DOCKER_USERNAME/$DOCKER_REPOSITORY:$IMAGE_TAG -f frontend/Dockerfile .
         docker push $DOCKER_USERNAME/$DOCKER_REPOSITORY:$IMAGE_TAG
         echo "image=$DOCKER_USERNAME/$DOCKER_REPOSITORY:$IMAGE_TAG" >> $GITHUB_ENV
+    
+    - name: Set container image variable
+      run: echo "CONTAINER_IMAGE=fitnesshero" >> $GITHUB_ENV
+      
 
     - name: Set up Terraform
       uses: hashicorp/setup-terraform@v1
       with:
         terraform_version: "1.0.0"  # Specify the Terraform version
 
-    - name: Terraform Init and Apply
+    # - name: Terraform Init and Apply
+    #   run: |
+    #     terraform init
+    #     terraform apply -auto-approve -var="container_image=${{ env.DOCKER_USERNAME }}/${{ env.DOCKER_REPOSITORY }}:${{ env.IMAGE_TAG }}"
+
+    - name: Apply Terraform
       run: |
         terraform init
-        terraform apply -auto-approve -var="container_image=${{ env.DOCKER_USERNAME }}/${{ env.DOCKER_REPOSITORY }}:${{ env.IMAGE_TAG }}"
+        terraform apply -auto-approve -var="container_image=${{ env.CONTAINER_IMAGE }}"
+
 
     - name: Update ECS Service
       run: |
