--- a/.github/workflows/aws.yml
+++ b/.github/workflows/aws.yml
@@ -31,12 +31,13 @@ on:
     branches: [ "main" ]
 
 env:
-  AWS_REGION: us-east-1
-  DOCKER_USERNAME: alvin254
-  DOCKER_REPOSITORY: fitnesshero
-  ECS_SERVICE: app-service
-  ECS_CLUSTER: cloudific
-  CONTAINER_NAME: app
+  AWS_REGION: us-east-1                   # set this to your preferred AWS region, e.g., us-west-1
+  DOCKER_USERNAME: alvin254         # set this to your Docker Hub username
+  DOCKER_REPOSITORY: fitnesshero     # set this to your Docker Hub repository name
+  ECS_SERVICE: app-service                 # set this to your Amazon ECS service name
+  ECS_CLUSTER: cloudific                # set this to your Amazon ECS cluster name
+  ECS_TASK_DEFINITION: ${{ secrets.ECS_TASK_DEFINITION }} # set this to the path to your Amazon ECS task definition file
+  CONTAINER_NAME: fitnesshero           # set this to the name of the container in your task definition
 
 permissions:
   contents: read
@@ -67,97 +68,19 @@ jobs:
       run: |
         docker build -t $DOCKER_USERNAME/$DOCKER_REPOSITORY:$IMAGE_TAG -f frontend/Dockerfile .
         docker push $DOCKER_USERNAME/$DOCKER_REPOSITORY:$IMAGE_TAG
-        echo "CONTAINER_IMAGE=$DOCKER_USERNAME/$DOCKER_REPOSITORY:$IMAGE_TAG" >> $GITHUB_ENV
+        echo "image=$DOCKER_USERNAME/$DOCKER_REPOSITORY:$IMAGE_TAG" >> $GITHUB_OUTPUT
 
-    - name: Set up Terraform
-      uses: hashicorp/setup-terraform@v1
+    - name: Fill in the new image ID in the Amazon ECS task definition
+      uses: aws-actions/amazon-ecs-render-task-definition@v1
       with:
-        terraform_version: "1.8.5"
+        task-definition: ${{ env.ECS_TASK_DEFINITION }}
+        container-name: ${{ env.CONTAINER_NAME }}
+        image: $DOCKER_USERNAME/$DOCKER_REPOSITORY:$IMAGE_TAG
 
-    - name: Apply Terraform
-      run: |
-        terraform init
-        terraform apply -auto-approve -var="container_image=${{ env.CONTAINER_IMAGE }}"
-
-    - name: Update ECS Service
-      run: |
-        aws ecs update-service --cluster ${{ env.ECS_CLUSTER }} --service ${{ env.ECS_SERVICE }} --force-new-deployment
-      env:
-        AWS_DEFAULT_REGION: ${{ env.AWS_REGION }}
-
-# name: Deploy to Amazon ECS
-
-# on:
-#   push:
-#     branches: [ "main" ]
-
-# env:
-#   AWS_REGION: us-east-1
-#   DOCKER_USERNAME: alvin254
-#   DOCKER_REPOSITORY: fitnesshero
-#   ECS_SERVICE: app-service
-#   ECS_CLUSTER: cloudific
-#   CONTAINER_NAME: app
-
-# permissions:
-#   contents: read
-
-# jobs:
-#   deploy:
-#     name: Deploy
-#     runs-on: ubuntu-latest
-#     environment: production
-
-#     steps:
-#     - name: Checkout
-#       uses: actions/checkout@v4
-
-#     - name: Configure AWS credentials
-#       uses: aws-actions/configure-aws-credentials@v1
-#       with:
-#         aws-access-key-id: ${{ secrets.AWS_ACCESS_KEY_ID }}
-#         aws-secret-access-key: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
-#         aws-region: ${{ env.AWS_REGION }}
-
-#     - name: Log in to Docker Hub
-#       run: echo "${{ secrets.DOCKER_PASSWORD }}" | docker login -u "${{ secrets.DOCKER_USERNAME }}" --password-stdin
-#     - name: list dirs
-#       run: | 
-#         ls -la
-#         ls frontend
- 
-
-#     - name: Build, tag, and push image to Docker Hub
-#       env:
-#         IMAGE_TAG: ${{ github.sha }}
-#       run: |
-#         docker build -t $DOCKER_USERNAME/$DOCKER_REPOSITORY:$IMAGE_TAG -f frontend/Dockerfile .
-#         docker push $DOCKER_USERNAME/$DOCKER_REPOSITORY:$IMAGE_TAG
-#         echo "image=$DOCKER_USERNAME/$DOCKER_REPOSITORY:$IMAGE_TAG" >> $GITHUB_ENV
-    
-#     - name: Set container image variable
-#       run: echo "CONTAINER_IMAGE=fitnesshero" >> $GITHUB_ENV
-      
-
-#     - name: Set up Terraform
-#       uses: hashicorp/setup-terraform@v1
-#       with:
-#         terraform_version: "1.8.5"  # Specify the Terraform version
-
-#     # - name: Terraform Init and Apply
-#     #   run: |
-#     #     terraform init
-#     #     terraform apply -auto-approve -var="container_image=${{ env.DOCKER_USERNAME }}/${{ env.DOCKER_REPOSITORY }}:${{ env.IMAGE_TAG }}"
-    
-
-#     - name: Apply Terraform
-#       run: |
-#         terraform init
-#         terraform apply -auto-approve -var="container_image=${{ env.CONTAINER_IMAGE }}"
-
-
-#     - name: Update ECS Service
-#       run: |
-#         aws ecs update-service --cluster ${{ env.ECS_CLUSTER }} --service ${{ env.ECS_SERVICE }} --force-new-deployment
-#       env:
-#         AWS_DEFAULT_REGION: ${{ env.AWS_REGION }}
+    - name: Deploy Amazon ECS task definition
+      uses: aws-actions/amazon-ecs-deploy-task-definition@v1
+      with:
+        task-definition: ${{ steps.task-def.outputs.task-definition }}
+        service: ${{ env.ECS_SERVICE }}
+        cluster: ${{ env.ECS_CLUSTER }}
+        wait-for-service-stability: true
