--- a/.github/workflows/aws.yml
+++ b/.github/workflows/aws.yml
@@ -30,98 +30,58 @@ name: Deploy to Amazon ECS
 on:
   push:
     branches: [ "main" ]
+
+env:
+  AWS_REGION: us-east-1                   # set this to your preferred AWS region, e.g., us-west-1
+  DOCKER_USERNAME: alvin254         # set this to your Docker Hub username
+  DOCKER_REPOSITORY: alvin254/fitnesshero     # set this to your Docker Hub repository name
+  ECS_SERVICE: app-service                 # set this to your Amazon ECS service name
+  ECS_CLUSTER: cloudific                # set this to your Amazon ECS cluster name
+  ECS_TASK_DEFINITION: MY_ECS_TASK_DEFINITION # set this to the path to your Amazon ECS task definition file
+  CONTAINER_NAME: MY_CONTAINER_NAME           # set this to the name of the container in your task definition
+
+permissions:
+  contents: read
+
 jobs:
   deploy:
+    name: Deploy
     runs-on: ubuntu-latest
+    environment: production
 
     steps:
-      - name: Checkout code
-        uses: actions/checkout@v2
+    - name: Checkout
+      uses: actions/checkout@v4
 
-      - name: Set up Docker Buildx
-        uses: docker/setup-buildx-action@v1
+    - name: Configure AWS credentials
+      uses: aws-actions/configure-aws-credentials@v1
+      with:
+        aws-access-key-id: ${{ secrets.AWS_ACCESS_KEY_ID }}
+        aws-secret-access-key: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
+        aws-region: ${{ env.AWS_REGION }}
 
-      - name: Log in to Docker Hub
-        uses: docker/login-action@v2
-        with:
-          username: ${{ secrets.DOCKER_HUB_USERNAME }}
-          password: ${{ secrets.DOCKER_HUB_ACCESS_TOKEN }}
+    - name: Log in to Docker Hub
+      run: echo "${{ secrets.DOCKER_PASSWORD }}" | docker login -u "${{ secrets.DOCKER_USERNAME }}" --password-stdin
 
-      - name: Build and push Docker image
-        uses: docker/build-push-action@v3
-        with:
-          context: .
-          tags: alvin254/fitnesshero:${{ github.ref_name }}
-          push: true
+    - name: Build, tag, and push image to Docker Hub
+      env:
+        IMAGE_TAG: ${{ github.sha }}
+      run: |
+        docker build -t $DOCKER_USERNAME/$DOCKER_REPOSITORY:$IMAGE_TAG .
+        docker push $DOCKER_USERNAME/$DOCKER_REPOSITORY:$IMAGE_TAG
+        echo "image=$DOCKER_USERNAME/$DOCKER_REPOSITORY:$IMAGE_TAG" >> $GITHUB_OUTPUT
 
-      - name: Configure AWS credentials
-        uses: aws-actions/configure-aws-credentials@v2
-        with:
-          aws-access-key-id: ${{ secrets.AWS_ACCESS_KEY_ID }}
-          aws-secret-access-key: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
-          aws-region: us-east-1
+    # - name: Fill in the new image ID in the Amazon ECS task definition
+    #   uses: aws-actions/amazon-ecs-render-task-definition@v1
+    #   with:
+    #     task-definition: ${{ env.ECS_TASK_DEFINITION }}
+    #     container-name: ${{ env.CONTAINER_NAME }}
+    #     image: $DOCKER_USERNAME/$DOCKER_REPOSITORY:$IMAGE_TAG
 
-      - name: Update ECS service with new task definition
-        id: update-ecs-service
-        uses: aws-actions/amazon-ecs-update-task-definition@v2
-        with:
-          cluster: cloudific
-          service: app-service
-          container-name: app
-          image: alvin254/fitnesshero:${{ github.ref_name }}
-
-# env:
-#   AWS_REGION: us-east-1
-#   DOCKER_USERNAME: alvin254
-#   DOCKER_REPOSITORY: alvin254/fitnesshero
-#   ECS_SERVICE: app-service
-#   ECS_CLUSTER: cloudific
-#   ECS_TASK_DEFINITION: modules/ecs/container_definitions.json
-#   CONTAINER_NAME: app
-
-# permissions:
-#   contents: read
-
-# jobs:
-#   deploy:
-#     name: Deploy
-#     runs-on: ubuntu-latest
-#     environment: production
-
-#     steps:
-#     - name: Checkout
-#       uses: actions/checkout@v4
-
-#     - name: Configure AWS credentials
-#       uses: aws-actions/configure-aws-credentials@v1
-#       with:
-#         aws-access-key-id: ${{ secrets.AWS_ACCESS_KEY_ID }}
-#         aws-secret-access-key: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
-#         aws-region: ${{ env.AWS_REGION }}
-
-#     - name: Log in to Docker Hub
-#       run: echo "${{ secrets.DOCKER_PASSWORD }}" | docker login -u "${{ secrets.DOCKER_USERNAME }}" --password-stdin
-
-#     - name: Build, tag, and push image to Docker Hub
-#       env:
-#         IMAGE_TAG: ${{ github.sha }}
-#       run: |
-#         docker build -t $DOCKER_REPOSITORY:$IMAGE_TAG -f frontend/Dockerfile .
-#         docker push $DOCKER_REPOSITORY:$IMAGE_TAG
-#         echo "image=$DOCKER_REPOSITORY:$IMAGE_TAG" >> $GITHUB_OUTPUT
-
-#     - name: Fill in the new image ID in the Amazon ECS task definition
-#       id: task-def
-#       uses: aws-actions/amazon-ecs-render-task-definition@v1
-#       with:
-#         task-definition: ${{ env.ECS_TASK_DEFINITION }}
-#         container-name: ${{ env.CONTAINER_NAME }}
-#         image: $DOCKER_REPOSITORY:$IMAGE_TAG
-
-#     - name: Deploy Amazon ECS task definition
-#       uses: aws-actions/amazon-ecs-deploy-task-definition@v1
-#       with:
-#         task-definition: ${{ steps.task-def.outputs.task-definition }}
-#         service: ${{ env.ECS_SERVICE }}
-#         cluster: ${{ env.ECS_CLUSTER }}
-#         wait-for-service-stability: true
+    - name: Deploy Amazon ECS task definition
+      uses: aws-actions/amazon-ecs-deploy-task-definition@v1
+      with:
+        task-definition: ${{ steps.task-def.outputs.task-definition }}
+        service: ${{ env.ECS_SERVICE }}
+        cluster: ${{ env.ECS_CLUSTER }}
+        wait-for-service-stability: true
