--- a/.github/workflows/aws.yml
+++ b/.github/workflows/aws.yml
@@ -67,7 +67,7 @@ jobs:
       env:
         IMAGE_TAG: ${{ github.sha }}
       run: |
-        docker build -t $DOCKER_USERNAME/$DOCKER_REPOSITORY:$IMAGE_TAG .
+        docker build -t $DOCKER_USERNAME/$DOCKER_REPOSITORY:$IMAGE_TAG -f frontend/Dockerfie.
         docker push $DOCKER_USERNAME/$DOCKER_REPOSITORY:$IMAGE_TAG
         echo "image=$DOCKER_USERNAME/$DOCKER_REPOSITORY:$IMAGE_TAG" >> $GITHUB_OUTPUT
 
