--- a/.github/workflows/aws.yml
+++ b/.github/workflows/aws.yml
@@ -34,7 +34,7 @@ on:
 env:
   AWS_REGION: us-east-1                   # set this to your preferred AWS region, e.g., us-west-1
   DOCKER_USERNAME: alvin254         # set this to your Docker Hub username
-  DOCKER_REPOSITORY: alvin254/fitnesshero     # set this to your Docker Hub repository name
+  DOCKER_REPOSITORY: fitnesshero     # set this to your Docker Hub repository name
   ECS_SERVICE: app-service                 # set this to your Amazon ECS service name
   ECS_CLUSTER: cloudific                # set this to your Amazon ECS cluster name
   ECS_TASK_DEFINITION: modules/ecs/container_definitions.json # set this to the path to your Amazon ECS task definition file
