--- a/.github/workflows/aws.yml
+++ b/.github/workflows/aws.yml
@@ -78,10 +78,18 @@ jobs:
     #     container-name: ${{ env.CONTAINER_NAME }}
     #     image: $DOCKER_USERNAME/$DOCKER_REPOSITORY:$IMAGE_TAG
 
-    - name: Deploy Amazon ECS task definition
+    # - name: Deploy Amazon ECS task definition
+    #   uses: aws-actions/amazon-ecs-deploy-task-definition@v1
+    #   with:
+    #     task-definition: ${{ steps.task-def.outputs.task-definition }}
+    #     service: ${{ env.ECS_SERVICE }}
+    #     cluster: ${{ env.ECS_CLUSTER }}
+    #     wait-for-service-stability: true
+
+    - name: Deploy to ECS
       uses: aws-actions/amazon-ecs-deploy-task-definition@v1
       with:
-        task-definition: ${{ steps.task-def.outputs.task-definition }}
-        service: ${{ env.ECS_SERVICE }}
-        cluster: ${{ env.ECS_CLUSTER }}
+        service: ${{ secrets.ECS_SERVICE }}
+        cluster: ${{ secrets.ECS_CLUSTER }}
+        task-definition: modules/ecs/container_definitions.json
         wait-for-service-stability: true
